# CauchyCaterpillar

./: CCatCodec.cpp  CCatCodec.h  CCatCpp.h  CCatSession.cpp  CCatSession.h  CCatTools.cpp  CCatTools.h  CMakeLists.txt  Counter.h  PacketAllocator.cpp  PacketAllocator.h  README.md  ccat.cpp  ccat.h
docs/: ExampleMatrix.txt  gack_generator_js.txt  simulation_results.txt
tests/: CCatLibrary.vcxproj  CCatLibrary.vcxproj.filters  CCatTest.vcxproj  CauchyCaterpillar.sln  StrikeRegister.cpp  StrikeRegister.h  Tester.cpp
